Implemented Unit Tests.